--- a/requirements.txt
+++ b/requirements.txt
@@ -18,9 +18,10 @@ gunicorn==20.1.0
 idna==3.4
 oauthlib==3.2.1
 Pillow==9.2.0
-psycopg2-binary==2.8.6
+psycopg2-binary==2.9.4
 pycparser==2.21
 PyJWT==2.5.0
+python-decouple==3.6
 python3-openid==3.2.0
 pytz==2022.2.1
 requests==2.28.1
