--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ cffi==1.15.1
 charset-normalizer==2.1.1
 cryptography==38.0.1
 defusedxml==0.7.1
+dj-database-url==1.0.0
 Django==4.1.1
 django-allauth==0.51.0
 django-braces==1.15.0
@@ -31,3 +32,4 @@ sqlparse==0.4.2
 swapper==1.3.0
 types-cryptography==3.3.23
 urllib3==1.26.12
+whitenoise==6.2.0
